--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,4 +1,3 @@
-
 seed: 42
 elo:
   start: 1500.0
@@ -8,12 +7,16 @@ features:
   form_window: 10
   h2h_decay: 0.97
 model:
-  type: "logreg"
-  calibration: "sigmoid"  # 'sigmoid' or 'isotonic'
+  type: "ensemble"        # ou "logreg" | "hgb"
+  calibration: "isotonic"
   test_size: 0.2
   shuffle: false
-  max_iter: 1000
+  max_iter: 2000
+  n_splits: 5
+  max_depth: 6
+  learning_rate: 0.06
+  ensemble_weight: 0.6
 selection:
   ev_threshold: 0.02
   kelly_fraction: 0.25
-  kelly_cap: 0.05
+  kelly_cap: 0.05         # << era string com acento; agora float
