--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,3 @@
-
 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
@@ -6,10 +5,10 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "tennistips"
 version = "0.1.0"
-description = "Professionalized tennis tipster with Elo+features, calibrated logistic model, and value bet selection."
+description = "Professionalized tennis tipster with Elo+features, calibrated models, and value bet selection."
 readme = "README.md"
 requires-python = ">=3.9"
-authors = [{name="Your Name"}]
+authors = [{ name = "Your Name" }]
 dependencies = [
   "requests>=2.31",
   "tqdm>=4.66",
@@ -19,8 +18,18 @@ dependencies = [
   "scikit-learn>=1.3",
   "pyyaml>=6.0",
   "typer>=0.12.0",
-  "joblib>=1.3"
+  "joblib>=1.3",
+  "feedparser>=6.0",
+  "dateparser>=1.2",
+  "beautifulsoup4>=4.12"
 ]
 
 [project.scripts]
 tennistips = "tennistips.cli:app"
+
+# Muito importante para projetos com pasta src/
+[tool.setuptools]
+package-dir = { "" = "src" }
+
+[tool.setuptools.packages.find]
+where = ["src"]
